# FixPlanet.github.io

./: .gitignore  README.md  about.html  committee.html  flake.nix  index.html  join-the-committee.html  shell.nix
.github/workflows/: deploy.yaml
ci/: build
css/: Style.css
src/: .gitignore  CNAME  about.md  committee.md  deploy  hack  index.md  join-the-committee.md  site.cabal  site.hs  stack.yaml
src/css/: Style.hs
src/metadata/: gitinfo  images.jsonl
src/scripts/: make-image-metadata
src/templates/: default.html
