name:               site
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , MissingH
                  , aeson
                  , blaze-html
                  , clay
                  , containers
                  , filepath
                  , hakyll
                  , string-conv
                  , tagsoup
                  , time
                  , time-locale-compat
  ghc-options:      -threaded -Wall
  default-language: Haskell2010
